@@ -15,6 +15,9 @@
    - markus@cvs.openbsd.org 2002/06/08 05:41:18
      [ssh_config]
      remove FallBackToRsh/UseRsh
+   - markus@cvs.openbsd.org 2002/06/08 12:36:53
+     [scp.c]
+     remove FallBackToRsh
 
 20020607
  - (bal) Removed --{enable/disable}-suid-ssh
